src/qir/snapshots/hugr_qir__qir__random_ext__test__emit_random_codegen@llvm14_1.snap
---
source: src/qir/random_ext.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define { i32, {} } @_hl.main.1({} %0) {
alloca_block:
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  %rint = call i32 @___random_int()
  %mrv = insertvalue { i32, {} } undef, i32 %rint, 0
  %mrv6 = insertvalue { i32, {} } %mrv, {} zeroinitializer, 1
  ret { i32, {} } %mrv6
}

declare i32 @___random_int()
